--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </form>
 
     <div class="tasksContent">
-      <p id="noTasks">Não há tarefas criadas</p>
+      <p id="noTasks">Não há tarefas</p>
     </div>
   </main>
   
