--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <h1>ToDo App</h1>
     </header>
     <form id="formsCreateTask">
-      <input class="inputAddTask" type="text" placeholder="Adicione uma nova tarefa">
+      <input class="inputAddTask" type="text" placeholder="Adicione uma nova tarefa" required>
       <button class="btnAddTask" onclick="throwCreateTask()" type="submit">+</button>
     </form>
 
